tests/type_errors/total_records_to_big.sy
def f
  : { a : Int } -> Int
  : { b } = b

